<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/healthRed">

    <Button
        android:id="@+id/bVitalSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vital_sign" />

    <Button
        android:id="@+id/bExercisPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_plan" />

    <Button
        android:id="@+id/bDietPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diet_plan" />

    <Button
        android:id="@+id/bMedication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medication" />

    <Button
        android:id="@+id/bAllergy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allergy" />

</LinearLayout>