<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5780511d"
    android:orientation="vertical">

    <Button
        android:id="@+id/bEducation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignLeft="@+id/bFinance"
        android:layout_below="@+id/bFinance"
        android:layout_marginTop="0dp"
        android:text="Education"
        android:layout_column="0"
        android:layout_margin="10dp"
        android:layout_row="3"
        android:layout_weight="1" />

    <Button
        android:id="@+id/bFinance"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignLeft="@+id/bHealth"
        android:layout_below="@+id/bHealth"
        android:layout_marginTop="0dp"
        android:text="@string/finance"
        android:layout_column="0"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:layout_row="2" />

    <Button
        android:id="@+id/bHealth"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignLeft="@+id/forgotPassword"
        android:layout_marginTop="0dp"
        android:text="@string/health"
        android:layout_column="0"
        android:layout_gravity="left|center"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:layout_row="1" />

    <Button
        android:id="@+id/bCareer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/career"
        android:layout_column="0"
        android:layout_weight="1"
        android:layout_marginLeft="144dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="144dp"
        android:layout_row="0"
        android:layout_margin="10dp" />

</LinearLayout>
