<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@android:color/darker_gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.example.LoginActivity" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:showDividers="beginning|middle|end">

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:text="@string/CLIP"
            android:textSize="40dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/editUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@android:color/white"
            android:ems="10"
            android:layout_below="@+id/TextView01"
            android:layout_toLeftOf="@+id/TextView01"
            android:padding="20dp"
            android:hint="Username">

            <requestFocus />

        </EditText>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@android:color/white"
            android:inputType="textPassword"
            android:layout_above="@+id/forgotPassword"
            android:layout_toLeftOf="@+id/TextView01"
            android:padding="20dp"
            android:hint="Password"
            android:layout_marginTop="20dp">
        </EditText>

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/wipe"
            android:layout_gravity="right"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/TextView01" />

        <TextView
            android:id="@+id/wrongPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView01"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/denied"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:padding="20dp"
        android:elegantTextHeight="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>